test/libyul/yulSyntaxTests/eof/setimmutable_shadowing.yul
{
    function setimmutable(a, b) {}
}
// ====
// bytecodeFormat: >=EOFv1
// dialect: evm
// ----
// DeclarationError 5017: (6-36): The identifier "setimmutable" is reserved and can not be used.
